Replace a NOTREACHED in StorageMonitorCros with a comment.

BUG=862892

Change-Id: Ib36cf0f8fdaadae0b9170ec3823d31e0fd398187
Reviewed-on: https://chromium-review.googlesource.com/1152638
Commit-Queue: Anand Mistry <amistry@chromium.org>
Reviewed-by: Tommy Li <tommycli@chromium.org>
Cr-Commit-Position: refs/heads/master@{#580005}
Former-commit-id: a83602a172d4e5989029ef79d9e4e3f8e7989b7d